--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
       <header>
         <nav>
           <div>
-            <img src="">
+            <img src="http://lorempixel.com/100/100/">
+            <ul>
+                <li>ARTICLES </li>
+                <li>EVENTS</li>
+                <li>TOPICS</li>
+                <li>WRITE FOR US</li>
+            </ul>
+          </div>
+
+          <div>
+            <img aside src="http://lorempixel.com/300/300/">
+            <p a href="http://www.google.com">A LIST APART'S</p> mailing list. Stay in the game—and ahead of the curve.
+              Never miss an article for people who make websites.</p>
+alistapart.com/email-signup
           </div>
         </nav>
       </header>
+
   </head>
   <body>
+    <h1>A LIST APART</h1>
 
   </body>
 </html>
