--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
           <div>
             <img aside src="http://lorempixel.com/300/300/">
-            <p a href="http://www.google.com">A LIST APART'S</p> mailing list. Stay in the game—and ahead of the curve.
+            <p>A LIST APART'S mailing list. Stay in the game—and ahead of the curve.
               Never miss an article for people who make websites.</p>
-alistapart.com/email-signup
+            <a>alistapart.com/email-signup</a>
           </div>
         </nav>
       </header>
