--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <header>
         <nav>
           <div>
-            <img src="http://lorempixel.com/100/100/">
+            <img src="https://alistapart.com/components/assets/img/favicons/favicon.ico">
             <ul>
                 <li>ARTICLES </li>
                 <li>EVENTS</li>
@@ -14,19 +14,32 @@
                 <li>WRITE FOR US</li>
             </ul>
           </div>
-
-          <div>
-            <img aside src="http://lorempixel.com/300/300/">
-            <p>A LIST APART'S mailing list. Stay in the game—and ahead of the curve.
-              Never miss an article for people who make websites.</p>
-            <a>alistapart.com/email-signup</a>
-          </div>
         </nav>
       </header>
-
   </head>
+___________________________________________________________________________________________________
   <body>
+    <main>
     <h1>A LIST APART</h1>
+    <div>
+      <img src="https://alistapart.com/components/assets/img/favicons/apple-touch-icon-57x57.png">
 
+      <p>
+        <a href="https://alistapart.com"> A LIST APART'S </a>
+        mailing list. Stay in the game—and ahead of the curve.
+        Never miss an article for people who make websites.
+      </p>
+      <a href="https://srv.buysellads.com/ads/click/x/GTND4237CAAIE2JWF6BLYKQWF6ADTK3YCEAD6Z3JCEAI55QECTYDK27KC6BDL277FTBI6K3EHJNCLSIZZRCCLSIZ"> alistapart.com/email-signup </a>
+    </p>
+  </div>
+    <div>
+      <img src="https://alistapart.com/d/_made/d/excerptillustration_300_1920_938_81.jpg">
+      NEW! JUN 06, 2017
+    </div>
+  </main>
+
+  <footer>
+  </footer>
+  ___________________________________________________________________________________________________
   </body>
 </html>
