--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <header>
         <nav>
           <div>
-            <img src="https://alistapart.com/components/assets/img/favicons/favicon.ico">
+            <img aside src="https://alistapart.com/components/assets/img/favicons/favicon.ico">
             <ul>
                 <li>ARTICLES </li>
                 <li>EVENTS</li>
@@ -23,23 +23,105 @@ ________________________________________________________________________________
     <h1>A LIST APART</h1>
     <div>
       <img src="https://alistapart.com/components/assets/img/favicons/apple-touch-icon-57x57.png">
-
       <p>
         <a href="https://alistapart.com"> A LIST APART'S </a>
         mailing list. Stay in the game—and ahead of the curve.
         Never miss an article for people who make websites.
       </p>
       <a href="https://srv.buysellads.com/ads/click/x/GTND4237CAAIE2JWF6BLYKQWF6ADTK3YCEAD6Z3JCEAI55QECTYDK27KC6BDL277FTBI6K3EHJNCLSIZZRCCLSIZ"> alistapart.com/email-signup </a>
-    </p>
+
   </div>
+
     <div>
       <img src="https://alistapart.com/d/_made/d/excerptillustration_300_1920_938_81.jpg">
-      NEW! JUN 06, 2017
+      <p>NEW! JUN 06, 2017</p>
+      <h2>Color Accessibility Workflows</h2>
+      <p> by <a href="/" rel="Author">Geri Coady</a> <a href="/" rel="Comments"> 4 Comments </a> </p>
+      <p> Color is a powerful tool that allows for an almost infinite array of design options. Yet when applying color to our work, we can have a “myopic” viewpoint that puts us, rather than our audience, front and center. Author Geri Coady discusses some solid color considerations we can make for our audiences in this excerpt from her new book, Color Accessibility Workflows, available from A Book Apart.</p>
     </div>
   </main>
-
+___________________________________________________________________________________________________
   <footer>
-  </footer>
-  ___________________________________________________________________________________________________
-  </body>
+    <nav>
+      <h2>More from A List Apart</h2>
+    <article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article>
+    <article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article><article>
+        <h4>The Mindfulness of a Manual Performance Audit</h4>
+        <p> by <a href="/" rel="block author"> Chip Cullen </a>
+        Let’s not automate everything away, urges Chip Cullen in a tribute to the benefits of occasional manual performance audits.
+        Workflow & Tools · May 30, 2017
+      </p>
+    </article>
+  </nav>
+  <div>
+    <p> A List Apart explores the design, development, and meaning of web content, with a special focus on web standards and best practices. Explore our articles or find out more about us.
+    </p>
+  </div>
+</footer>
 </html>
